# symple-financial-management-system

./: .env.dist  .gitignore  .pylintrc  Dockerfile  README.md  create_superuser.py  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini
budget/: apps.py  celery_tasks.py  models.py  serializers.py  urls.py  views.py
budget/migrations/: 0001_initial.py
budget/tests/: constants.py  test_api.py  test_models.py
fin_transactions/: admin.py  apps.py  celery_tasks.py  models.py  serializers.py  urls_reports.py  urls_transactions.py  views.py
fin_transactions/migrations/: 0001_initial.py  0002_alter_transaction_user.py  0002_initial.py  0003_alter_transaction_date_transaction.py  0003_alter_transaction_user.py  0004_alter_transaction_options.py  0004_reportsresult.py  0005_reportsresult_send_email.py  0006_alter_reportsresult_options_and_more.py
fin_transactions/tests/: conftest.py  test_api.py  test_models_transactions.py
fin_transactions/tests/reports/: test_api_generate_report.py  test_api_report_result.py  test_api_status_report.py  test_models_report_result.py  test_services_create_csv_email.py
fin_transactions/tests/transactions/: test_api_transactions.py
fms/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
services/: date_operations.py  decorators.py  email.py  generate_secrets.py  generators.py  report.py
users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_date_joined_alter_user_email_and_more.py  0002_alter_user_options.py  0003_alter_user_managers.py  0003_alter_user_options.py
users/tests/: test_api.py  test_models.py
